   always the <integer>th stack entry. [MG] [Rhost] [MUX]
 * It's now documented that replace() can alter multiple words at once. 
   Reported by Jules. [MG]
 * Some terminfo() information can now be retrieved by mortals on other 
   players' connections. Suggested by spork. [MG]
 * Added a new option to colors() to include ansi underline, invert and 
   flash from the input in the output. [MG]

Minor changes:
 * ansi() now accepts a space-separated list of color codes, with later
   groups overriding earlier ones. Allows you to specify basic ANSI codes
   after XTERM color codes. Suggested by spork, [Rhost]. [MG]
 * Compiler warning fixed by ChaosMageX.
 * Help fixes. [MG]
 * The tables mapping color names and RGB values are now generated by a
   script in utils/. [SW]
 * Converting from named colors to the nearest xterm or ansi equivalent is
   much more efficient. [SW]
 * Converting from extended colors to ansi colors is smarter. Based on
   work by Padraic. [SW]
 * Email registration no longer pretends to work with really!old!addresses.
   [SW].
 * Better error reporting in logs and event hooks on failed email
   registration. Suggested by Padriac. [SW]

Fixes:
 * %c contained the evaluated input (the same as %u), instead of the
   unevaluated input. Reported by Ingwaz. [MG]
 * repeat() could write partial ANSI tags, causing buffer overflows. From a
   report by Ashen-Shugar. [MG]
 * dbcks didn't reset corrupt exit's source room. Patch by Padriac.
 * lmath(and,) returned 1 instead of 0. Reported by Padriac. [SW].
 * Mixing old-style ansi colors and xterm colors was broken. [MG]
 * Players who couldn't see xterm colors would sometimes get a highlighted
   foreground color by mistake. [MG]
 * colors(<old-style-ansi>, hex) and colors(*, 16color) were broken. 
   Reported by Kimiko. [MG]
 * ANSI highlight would sometimes bleed when xterm colors were downgraded to
   the basic 16-color ANSI palette. Reported by Kimiko. [MG]
